Mobile ui fixes - Fix sticky menu on mobile dash page - Fix padding on error page

--- a/static/css/dash.css
+++ b/static/css/dash.css
@@ -88,6 +88,7 @@
   #dash #sidebar {
     width: 100%;
     height: initial;
+    position: initial;
   }
   #dash #feed {
     width: 100%;
